Finish adding pizza + style thymeleaf-pages