@@ -1,9 +1,15 @@
 package org.example.pizza_paradise.infrastructure;
 
 import org.example.pizza_paradise.models.Order;
+import org.example.pizza_paradise.models.OrderLine;
+import org.example.pizza_paradise.models.Topping;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.support.GeneratedKeyHolder;
+import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Repository;
 
+import java.sql.PreparedStatement;
+import java.sql.Statement;
 import java.util.List;
 import java.util.Optional;
 
@@ -16,14 +22,38 @@ public class OrderRepository {
         this.jdbcTemplate = jdbcTemplate;
     }
 
-    public void saveOrder(Order order) {
+    public int saveOrder(Order order) {
         String sql = "INSERT INTO orders (order_date, total_price) VALUES (?, ?)";
-        jdbcTemplate.update(sql, order.getOrderDate(), order.getTotalPrice());
+        KeyHolder keyHolder = new GeneratedKeyHolder();
+
+        jdbcTemplate.update(con -> {
+            PreparedStatement ps = con.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS);
+            ps.setObject(1, order.getOrderDate());
+            ps.setDouble(2, order.getTotalPrice());
+            return ps;
+        }, keyHolder);
+
+        return keyHolder.getKey().intValue();
     }
 
-    public void addPizzaToOrder(int orderId, int pizzaId) {
-        String sql  = "INSERT INTO order_pizzas (order_id, pizza_id) VALUES (?, ?)";
-        jdbcTemplate.update(sql, orderId, pizzaId);
+    public int saveOrderLine(int orderId, int pizzaId, int quantity) {
+        String sql = "INSERT INTO order_lines (order_id, pizza_id, quantity) VALUES (?, ?, ?)";
+        KeyHolder keyHolder = new GeneratedKeyHolder();
+
+        jdbcTemplate.update(con -> {
+            PreparedStatement ps = con.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS);
+            ps.setInt(1, orderId);
+            ps.setInt(2, pizzaId);
+            ps.setInt(3, quantity);
+            return ps;
+        }, keyHolder);
+
+        return keyHolder.getKey().intValue();
+    }
+
+    public void saveToppingForOrderLine(int orderLineId, int toppingId) {
+        String sql = "INSERT INTO order_lines_toppings (order_line_id, topping_id) VALUES (?, ?)";
+        jdbcTemplate.update(sql, orderLineId, toppingId);
     }
 
     public List<Order> findAllOrders() {
@@ -53,6 +83,29 @@ public class OrderRepository {
             return Optional.empty();
         }
 
-        return Optional.of(orders.get(0));
+        return Optional.of(orders.getFirst());
+    }
+
+    public List<OrderLine> findOrderLinesByOrderId(int orderId) {
+        String sql = "SELECT * FROM order_lines WHERE order_id = ?";
+        return jdbcTemplate.query(sql, (rs, rowNum) -> new OrderLine(
+                rs.getInt("id"),
+                rs.getInt("order_id"),
+                rs.getInt("pizza_id"),
+                rs.getInt("quantity")
+        ), orderId);
+    }
+
+    public List<Topping> findToppingsByOrderLineId(int orderLineId) {
+        String sql = """
+                    SELECT t.* FROM toppings t
+                    JOIN order_lines_toppings olt ON t.id = olt.topping_id
+                    WHERE olt.order_line_id = ?""";
+
+        return jdbcTemplate.query(sql, (rs, rowNum) -> new Topping(
+                rs.getInt("id"),
+                rs.getString("name"),
+                rs.getDouble("price")
+        ), orderLineId);
     }
 }
